--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Grilled Cheese Sandwich Recipe</h1>
-  
+    <h1>Grilled Cheese Sandwich Recipe</h1>
   <h2>Ingredients:</h2>
   <ul>
     <li>2 slices of bread</li>
